# pico-http-client

./: .gitignore  CMakeLists.txt  Dockerfile  LICENCE  README.md  openocd_pico.cfg  pico_http_client_import.cmake  pico_sdk_import.cmake
example/basic_request/: CMakeLists.txt  linux_basic_request.cmake  linux_basic_request.cpp  picow_basic_request.cmake  picow_basic_request.cpp
include/: lwipopts.h
include/pico_http_client/: pico_http_client.h
include/pico_http_client/lwip/: socket_impl.h
include/pico_http_client/unix/: socket_impl.h
src/: pico_http_client.c  socket.c
src/lwip/: socket_impl.c
src/unix/: socket_impl.c
